--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/_Imports.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/_Imports.razor
@@ -11,5 +11,7 @@
 @using SergioTenza.Blazor.Wasm.Components.Widgets
 @using SergioTenza.Blazor.Wasm.Components.Dialogs
 @using Microsoft.FluentUI.AspNetCore.Components
+@using Microsoft.FluentUI.AspNetCore.Components.Icons
 @using System.ComponentModel.DataAnnotations
 @using SergioTenza.Blazor.Wasm.Attributes
+@using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
