--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/App.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/App.razor
@@ -1,12 +1,14 @@
 ﻿
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="TNZ Servicios Informáticos - Consultoría y Formación Especializada en Blazor y Dotnet" />
+    <meta name="theme-color" content="#512BD4" />
+    <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="SergioTenza.Blazor.Wasm.styles.css" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
@@ -14,9 +16,9 @@
     <HeadOutlet @rendermode="InteractiveServer"/>
 </head>
 
-<body>   
+<body>
     <Routes @rendermode="InteractiveServer" />
-    <script src="_framework/blazor.web.js"></script>    
+    <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
